--- a/laba 4.1
+++ b/laba 4.1
@@ -1,12 +1,10 @@
 #include <iostream>
 using namespace std;
-
-int main() {
-	double Ar, Ad, pi;
-	cout << "Ad=";
-	cin >> Ad;
-	pi=3.14;
-	Ar= Ad*pi/180;
-	cout << "Ar=" << Ar;
-	return 0;
+int main()
+{
+    float a,g;
+    cout<<"Vvedite chislo"<<endl;
+    cin>>a;
+    g=a/180*3.14;
+    cout<<a<<"="<<g<<" rad"<<endl;
 }
