--- a/laba 4.2
+++ b/laba 4.2
@@ -1,12 +1,10 @@
 #include <iostream>
 using namespace std;
-
-int main() {
-	double Ar, Ad, pi;
-	cout << "Ar=";
-	cin >> Ar;
-	pi=3.14;
-	Ad= Ar*180 / pi;
-	cout << "Ad=" << Ad<<"°";
-	return 0;
+int main()
+{
+    float a,g;
+    cout<<"Vvedite chislo"<<endl;
+    cin>>a;
+    g=a/3.14*180;
+    cout<<a<<"="<<g<<" grad"<<endl;
 }
