--- a/laba 4.4
+++ b/laba 4.4
@@ -1,18 +1,10 @@
 #include <iostream>
 using namespace std;
-
-int main() {
-setlocale(LC_ALL, "Russian");
-	int v1,v2,v,S,s,t;
-	cout <<"V1=";
-	cin >> v1;
-	cout << "V2=";
-	cin >> v2;
-	cout << "S=";
-	cin >> S;
-	cout << "T=";
-	cin >> t;
-	s=S+t*(v1+v2);
-	cout << "Расстояние станет равным " << s << " км";
-	return 0;
+int main()
+{
+    float v1,v2,s,t,s1;
+    cout<<"Vvedite skorosti avtomobilei i skolko kilometrov mezhdu nimi i vremia"<<endl;
+    cin>>v1>>v2>>s>>t;
+    s1=(v1+v2)*t+s;
+    cout<<"Rasstoianie="<<s1<<endl;
 }
