--- a/laba 4.5
+++ b/laba 4.5
@@ -1,14 +1,10 @@
 #include <iostream>
 using namespace std;
-
-
-int main() {
-	int A,B,x;
-	cout << "A=";
-	cin >> A;
-	cout << "B=";
-	cin >> B;
-	x= -B/A;
-	cout << "x=" << x;
-	return 0;
+int main()
+{
+    float a,b,x;
+    cout<<"vvedite koeffizienti"<<endl;
+    cin>>a>>b;
+    x=-b/a;
+    cout<<"X="<<x<<endl;
 }
