--- a/laba 4.6
+++ b/laba 4.6
@@ -1,19 +1,11 @@
 #include <iostream>
-#include <cmath>
 using namespace std;
-
-int main() {
-setlocale(LC_ALL, "Russian");
-	double a1, b1, c1, a2, b2, c2, x, y, z;
-  cout << "Введите коэффициенты 1-го уровнения: ";
-  cin >> a1 >> b1 >> c1;   
-  cout << "Введите коэффициенты 2-го уравнения: ";
-  cin >> a2 >> b2 >> c2;
-  
-  z=a1*b2-a2*b1;
-  x=(c1*b2-c2*b1)/z;
-  y=(a1*c2-a2*c1)/z;
-  cout << "x= " << x << endl;
-  cout << "y= " << y << endl;
-	return 0;
+int main()
+{
+    float a1,b1,c1,a2,b2,c2,x,y;
+    cout<<"vvedite koeffizienti"<<endl;
+    cin>>a1>>b1>>c1>>a2>>b2>>c2;
+    x=((c1*b2)-(b1*c2))/((a1*b2)-(a2*b1));
+    y=((a1*c2)-(a2*c1))/((a1*b2)-(a2*b1));
+    cout<<"X="<<x<<", Y="<<y<<endl;
 }
